# nlohmann-json-serde

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  License  README.md  vcpkg.json
cmake/: clang_tidy.cmake  compiler_msvc.cmake  compiler_posix.cmake  sanitizer.cmake
nlohmann_serde/: CMakeLists.txt  macros.h  nlohmann_serde.h  serde_options.h
tests/: CMakeLists.txt  options_detail_test.cpp  serde_test.cpp  stringification.h  test_main.cpp
